--- a/myshops 1k/33.html
+++ b/myshops 1k/33.html
@@ -101,218 +101,226 @@
 
 <body>
     <div class="containerr">
-        <div class="row">
-            <div class="main" style="padding-top: 25px;">
+        <div class="row"> 
+            <div class="main" style="padding-top: 45px;">
                 <div class="title">
-                    <h5>Tefal</h5>
+                    <h5>PHILIPS</h5>
                 </div>
                 <div class="model">
-                    <p>Vitapress Sitrus 0,6 lt</p>
+                    <p>HD2590/00</p>
                 </div>
-                <div class="specifications">
-                    <ul class="ul-pad" style="margin-top: 40px;">
-                        <li>Güc: 25 Vt</li>
-                    </ul>
-                </div>
-                <div class="installment-price" style="display: flex; margin-top: 35px;">
+                <div class="installment-price" style="display: flex; margin-top: 60px;">
                     <span class="ayliq">12 aylıq</span>
                     <span class="qiymet">7.42</span>
                     <img src="assets/img/azn-logo-black-2.png" alt=""
                         style="width: 20px; height: 20px; margin-top: 13px;">
                 </div>
-                <div class="price" style="margin-top: 15px;">
-                    <span class="esas-price" style="margin-right: 4px;">89</span>
+                <div class="price" style="margin-top: 40px;">
+                    <span class="esas-price" style="margin-right: 4px; font-size: 32px;">89</span>
                     <img src="assets/img/azn-logo-black-2.png" alt=""
                         style="width: 20px; height: 20px; margin-right: 15px;">
                     <img src="assets/img/myshops-logo.jpg" alt="" style="width: 70px;">
                 </div>
             </div>
 
-            <div class="main" style="padding-top: 10px;">
+            <div class="main" style="padding-top: 45px;">
                 <div class="title">
-                    <h5>Bosch</h5>
+                    <h5>TEFAL</h5>
                 </div>
                 <div class="model">
-                    <p>HBF011BA0Q</p>
+                    <p>Display Digital</p>
+                </div>
+                <div class="installment-price" style="display: flex; margin-top: 60px;">
+                    <span class="ayliq">12 aylıq</span>
+                    <span class="qiymet">17.42</span>
+                    <img src="assets/img/azn-logo-black-2.png" alt=""
+                        style="width: 20px; height: 20px; margin-top: 13px;">
+                </div>
+                <div class="price" style="margin-top: 40px;">
+                    <span class="esas-price" style="margin-right: 4px; font-size: 32px;">209</span>
+                    <img src="assets/img/azn-logo-black-2.png" alt=""
+                        style="width: 20px; height: 20px; margin-right: 15px;">
+                    <img src="assets/img/myshops-logo.jpg" alt="" style="width: 70px;">
+                </div>
+            </div>
+
+            <div class="main" style="padding-top: 45px;">
+                <div class="title">
+                    <h5>TEFAL</h5>
+                </div>
+                <div class="model">
+                    <p>Ultra Mini</p>
+                </div>
+                <div class="installment-price" style="display: flex; margin-top: 60px;">
+                    <span class="ayliq">12 aylıq</span>
+                    <span class="qiymet">8.25</span>
+                    <img src="assets/img/azn-logo-black-2.png" alt=""
+                        style="width: 20px; height: 20px; margin-top: 13px;">
+                </div>
+                <div class="price" style="margin-top: 40px;">
+                    <span class="esas-price" style="margin-right: 4px; font-size: 32px;">99</span>
+                    <img src="assets/img/azn-logo-black-2.png" alt=""
+                        style="width: 20px; height: 20px; margin-right: 15px;">
+                    <img src="assets/img/myshops-logo.jpg" alt="" style="width: 70px;">
+                </div>
+            </div>
+
+            <div class="main" style="padding-top: 25px;">
+                <div class="title">
+                    <h5>BOSCH</h5>
+                </div>
+                <div class="model">
+                    <p>BGBS2BA1P</p>
                 </div>
                 <div class="specifications">
-                    <ul>
-                        <li>Növü: Quraşdırılan Soba</li>
-                        <li>Proqram: 5</li>
-                        <li>Taymer: Var</li>
-                        <li>Həcm: 66 L</li>
-                        <li>Ölçü: 59.7 × 56.8 × 55 sm</li>
-                        <li>İstehsalçı ölkə: Türkiyə</li>
+                    <ul class="ul-pad" style="margin-top: 40px;">
+                        <li>Güc: 600 Vt</li>
                     </ul>
-                </div>
-                <div class="installment-price" style="display: flex;">
-                    <span class="ayliq">12 aylıq</span>
-                    <span class="qiymet">53.30</span>
-                    <img src="assets/img/azn-logo-black-2.png" alt=""
-                        style="width: 20px; height: 20px; margin-top: 13px;">
-                </div>
-                <div class="price">
-                    <span class="esas-price" style="margin-right: 4px;">639</span>
-                    <img src="assets/img/azn-logo-black-2.png" alt=""
-                        style="width: 20px; height: 20px; margin-right: 15px;">
-                    <img src="assets/img/myshops-logo.jpg" alt="" style="width: 70px;">
-                </div>
-            </div>
-
-            <div class="main" style="padding-top: 45px;">
-                <div class="title">
-                    <h5>SONY</h5>
-                </div>
-                <div class="model">
-                    <p>S-FRAME DPF-C70A</p>
                 </div>
                 <div class="installment-price" style="display: flex; margin-top: 60px;">
                     <span class="ayliq">12 aylıq</span>
-                    <span class="qiymet">2.49</span>
+                    <span class="qiymet">18.25</span>
                     <img src="assets/img/azn-logo-black-2.png" alt=""
                         style="width: 20px; height: 20px; margin-top: 13px;">
                 </div>
                 <div class="price" style="margin-top: 40px;">
-                    <span class="esas-price" style="margin-right: 4px; font-size: 32px;">29.90</span>
+                    <span class="esas-price" style="margin-right: 4px; font-size: 32px;">219</span>
                     <img src="assets/img/azn-logo-black-2.png" alt=""
                         style="width: 20px; height: 20px; margin-right: 15px;">
                     <img src="assets/img/myshops-logo.jpg" alt="" style="width: 70px;">
                 </div>
             </div>
 
-            <div class="main" style="padding-top: 30px;">
+            <div class="main" style="padding-top: 25px;">
                 <div class="title">
-                    <h5>LG</h5>
+                    <h5>BOSCH</h5>
                 </div>
                 <div class="model">
-                    <p>GN-C752HQCL</p>
+                    <p>BGC21X300</p>
                 </div>
                 <div class="specifications">
-                    <ul>
-                        <li>Ümumi həcmi: 506 lt</li>
-                        <li>Əritmə növü: NoFrost</li>
-                        <li>Enerji sinfi: A</li>
-                        <li style="font-size: 14px;">Ölçülər: 180 × 78 × 73 sm</li>
+                    <ul class="ul-pad" style="margin-top: 40px;">
+                        <li>Güc: 550 Vt</li>
                     </ul>
                 </div>
-                <div class="installment-price" style="display: flex;">
+                <div class="installment-price" style="display: flex; margin-top: 60px;">
                     <span class="ayliq">12 aylıq</span>
-                    <span class="qiymet">158.25</span>
+                    <span class="qiymet">29.92</span>
                     <img src="assets/img/azn-logo-black-2.png" alt=""
                         style="width: 20px; height: 20px; margin-top: 13px;">
                 </div>
-                <div class="price">
-                    <span class="esas-price" style="margin-right: 4px;">1899</span>
+                <div class="price" style="margin-top: 40px;">
+                    <span class="esas-price" style="margin-right: 4px; font-size: 32px;">359</span>
                     <img src="assets/img/azn-logo-black-2.png" alt=""
                         style="width: 20px; height: 20px; margin-right: 15px;">
                     <img src="assets/img/myshops-logo.jpg" alt="" style="width: 70px;">
                 </div>
             </div>
 
-            <div class="main" style="padding-top: 45px;">
+            <div class="main" style="padding-top: 25px;">
                 <div class="title">
-                    <h5>BEURER</h5>
+                    <h5>BOSCH</h5>
                 </div>
                 <div class="model">
-                    <p>GS 14</p>
+                    <p>BGLS42230</p>
+                </div>
+                <div class="specifications">
+                    <ul class="ul-pad" style="margin-top: 40px;">
+                        <li>Güc: 2200 Vt</li>
+                    </ul>
                 </div>
                 <div class="installment-price" style="display: flex; margin-top: 60px;">
                     <span class="ayliq">12 aylıq</span>
-                    <span class="qiymet">5.75</span>
+                    <span class="qiymet">29.92</span>
                     <img src="assets/img/azn-logo-black-2.png" alt=""
                         style="width: 20px; height: 20px; margin-top: 13px;">
                 </div>
                 <div class="price" style="margin-top: 40px;">
-                    <span class="esas-price" style="margin-right: 4px; font-size: 32px;">69</span>
+                    <span class="esas-price" style="margin-right: 4px; font-size: 32px;">359</span>
                     <img src="assets/img/azn-logo-black-2.png" alt=""
                         style="width: 20px; height: 20px; margin-right: 15px;">
                     <img src="assets/img/myshops-logo.jpg" alt="" style="width: 70px;">
                 </div>
             </div>
 
-            <div class="main" style="padding-top: 45px;">
+            <div class="main" style="padding-top: 25px;">
                 <div class="title">
-                    <h5>Tefal</h5>
+                    <h5>BOSCH</h5>
                 </div>
                 <div class="model">
-                    <p>Premiss</p>
+                    <p>BGS05A222</p>
+                </div>
+                <div class="specifications">
+                    <ul class="ul-pad" style="margin-top: 40px;">
+                        <li>Güc: 700 Vt</li>
+                    </ul>
                 </div>
                 <div class="installment-price" style="display: flex; margin-top: 60px;">
                     <span class="ayliq">12 aylıq</span>
-                    <span class="qiymet">4.08</span>
+                    <span class="qiymet">19.08</span>
                     <img src="assets/img/azn-logo-black-2.png" alt=""
                         style="width: 20px; height: 20px; margin-top: 13px;">
                 </div>
                 <div class="price" style="margin-top: 40px;">
-                    <span class="esas-price" style="margin-right: 4px; font-size: 32px;">49</span>
+                    <span class="esas-price" style="margin-right: 4px; font-size: 32px;">229</span>
                     <img src="assets/img/azn-logo-black-2.png" alt=""
                         style="width: 20px; height: 20px; margin-right: 15px;">
                     <img src="assets/img/myshops-logo.jpg" alt="" style="width: 70px;">
                 </div>
             </div>
 
-            <div class="main" style="padding-top: 45px;">
+            <div class="main" style="padding-top: 25px;">
                 <div class="title">
-                    <h5>Tefal</h5>
+                    <h5>BOSCH</h5>
                 </div>
                 <div class="model">
-                    <p>Premiss</p>
+                    <p>BGS3U1800</p>
+                </div>
+                <div class="specifications">
+                    <ul class="ul-pad" style="margin-top: 40px;">
+                        <li>Güc: 1800 Vt</li>
+                    </ul>
                 </div>
                 <div class="installment-price" style="display: flex; margin-top: 60px;">
                     <span class="ayliq">12 aylıq</span>
-                    <span class="qiymet">4.08</span>
+                    <span class="qiymet">29.08</span>
                     <img src="assets/img/azn-logo-black-2.png" alt=""
                         style="width: 20px; height: 20px; margin-top: 13px;">
                 </div>
                 <div class="price" style="margin-top: 40px;">
-                    <span class="esas-price" style="margin-right: 4px; font-size: 32px;">49</span>
+                    <span class="esas-price" style="margin-right: 4px; font-size: 32px;">349</span>
                     <img src="assets/img/azn-logo-black-2.png" alt=""
                         style="width: 20px; height: 20px; margin-right: 15px;">
                     <img src="assets/img/myshops-logo.jpg" alt="" style="width: 70px;">
                 </div>
             </div>
 
-            <div class="main" style="padding-top: 45px;">
+            <div class="main" style="padding-top: 25px;">
                 <div class="title">
-                    <h5>Tefal</h5>
+                    <h5>Samsung</h5>
                 </div>
                 <div class="model">
-                    <p>Premiss</p>
+                    <p>VCC4181V37 XEV</p>
+                </div>
+                <div class="specifications">
+                    <ul class="ul-pad" style="margin-top: 40px;">
+                        <li>Güc: 1800 Vt</li>
+                    </ul>
                 </div>
                 <div class="installment-price" style="display: flex; margin-top: 60px;">
                     <span class="ayliq">12 aylıq</span>
-                    <span class="qiymet">4.08</span>
+                    <span class="qiymet">16.58</span>
                     <img src="assets/img/azn-logo-black-2.png" alt=""
                         style="width: 20px; height: 20px; margin-top: 13px;">
                 </div>
                 <div class="price" style="margin-top: 40px;">
-                    <span class="esas-price" style="margin-right: 4px; font-size: 32px;">49</span>
+                    <span class="esas-price" style="margin-right: 4px; font-size: 32px;">199</span>
                     <img src="assets/img/azn-logo-black-2.png" alt=""
                         style="width: 20px; height: 20px; margin-right: 15px;">
                     <img src="assets/img/myshops-logo.jpg" alt="" style="width: 70px;">
                 </div>
             </div>
-
-            <div class="main" style="padding-top: 45px;">
-                <div class="title">
-                    <h5>Tefal</h5>
-                </div>
-                <div class="model">
-                    <p>Premiss</p>
-                </div>
-                <div class="installment-price" style="display: flex; margin-top: 60px;">
-                    <span class="ayliq">12 aylıq</span>
-                    <span class="qiymet">4.08</span>
-                    <img src="assets/img/azn-logo-black-2.png" alt=""
-                        style="width: 20px; height: 20px; margin-top: 13px;">
-                </div>
-                <div class="price" style="margin-top: 40px;">
-                    <span class="esas-price" style="margin-right: 4px; font-size: 32px;">49</span>
-                    <img src="assets/img/azn-logo-black-2.png" alt=""
-                        style="width: 20px; height: 20px; margin-right: 15px;">
-                    <img src="assets/img/myshops-logo.jpg" alt="" style="width: 70px;">
-                </div>
-            </div>
+            
 
         </div>
     </div>
