--- a/myshops 1k/34.html
+++ b/myshops 1k/34.html
@@ -102,107 +102,191 @@
 <body>
     <div class="containerr">
         <div class="row">
+
             <div class="main" style="padding-top: 25px;">
                 <div class="title">
-                    <h5>Tefal</h5>
+                    <h5>Samsung</h5>
                 </div>
                 <div class="model">
-                    <p>Vitapress Sitrus 0,6 lt</p>
+                    <p>VCC4520S36 XEV</p>
                 </div>
                 <div class="specifications">
                     <ul class="ul-pad" style="margin-top: 40px;">
-                        <li>Güc: 25 Vt</li>
+                        <li>Güc: 1600 Vt</li>
                     </ul>
                 </div>
-                <div class="installment-price" style="display: flex; margin-top: 35px;">
+                <div class="installment-price" style="display: flex; margin-top: 60px;">
                     <span class="ayliq">12 aylıq</span>
-                    <span class="qiymet">7.42</span>
+                    <span class="qiymet">15.75</span>
                     <img src="assets/img/azn-logo-black-2.png" alt=""
                         style="width: 20px; height: 20px; margin-top: 13px;">
                 </div>
-                <div class="price" style="margin-top: 15px;">
-                    <span class="esas-price" style="margin-right: 4px;">89</span>
+                <div class="price" style="margin-top: 40px;">
+                    <span class="esas-price" style="margin-right: 4px; font-size: 32px;">189</span>
                     <img src="assets/img/azn-logo-black-2.png" alt=""
                         style="width: 20px; height: 20px; margin-right: 15px;">
                     <img src="assets/img/myshops-logo.jpg" alt="" style="width: 70px;">
                 </div>
             </div>
 
-            <div class="main" style="padding-top: 10px;">
+            <div class="main" style="padding-top: 25px;">
                 <div class="title">
-                    <h5>Bosch</h5>
+                    <h5>Samsung</h5>
                 </div>
                 <div class="model">
-                    <p>HBF011BA0Q</p>
+                    <p>VCC5241S3K/XEV</p>
+                </div>
+                <div class="specifications">
+                    <ul class="ul-pad" style="margin-top: 40px;">
+                        <li>Güc: 1800 Vt</li>
+                    </ul>
+                </div>
+                <div class="installment-price" style="display: flex; margin-top: 60px;">
+                    <span class="ayliq">12 aylıq</span>
+                    <span class="qiymet">15.75</span>
+                    <img src="assets/img/azn-logo-black-2.png" alt=""
+                        style="width: 20px; height: 20px; margin-top: 13px;">
+                </div>
+                <div class="price" style="margin-top: 40px;">
+                    <span class="esas-price" style="margin-right: 4px; font-size: 32px;">189</span>
+                    <img src="assets/img/azn-logo-black-2.png" alt=""
+                        style="width: 20px; height: 20px; margin-right: 15px;">
+                    <img src="assets/img/myshops-logo.jpg" alt="" style="width: 70px;">
+                </div>
+            </div>
+
+            <div class="main" style="padding-top: 45px;">
+                <div class="title">
+                    <h5>ROWENTA </h5>
+                </div>
+                <div class="model">
+                    <p>TN6000</p>
+                </div>
+                <div class="installment-price" style="display: flex; margin-top: 60px;">
+                    <span class="ayliq">12 aylıq</span>
+                    <span class="qiymet">9.08</span>
+                    <img src="assets/img/azn-logo-black-2.png" alt=""
+                        style="width: 20px; height: 20px; margin-top: 13px;">
+                </div>
+                <div class="price" style="margin-top: 40px;">
+                    <span class="esas-price" style="margin-right: 4px; font-size: 32px;">109</span>
+                    <img src="assets/img/azn-logo-black-2.png" alt=""
+                        style="width: 20px; height: 20px; margin-right: 15px;">
+                    <img src="assets/img/myshops-logo.jpg" alt="" style="width: 70px;">
+                </div>
+            </div>
+
+            <div class="main" style="padding-top: 45px;">
+                <div class="title">
+                    <h5>ROWENTA </h5>
+                </div>
+                <div class="model">
+                    <p>TN8931 Multistyle 7in1</p>
+                </div>
+                <div class="installment-price" style="display: flex; margin-top: 60px;">
+                    <span class="ayliq">12 aylıq</span>
+                    <span class="qiymet">9.08</span>
+                    <img src="assets/img/azn-logo-black-2.png" alt=""
+                        style="width: 20px; height: 20px; margin-top: 13px;">
+                </div>
+                <div class="price" style="margin-top: 40px;">
+                    <span class="esas-price" style="margin-right: 4px; font-size: 32px;">109</span>
+                    <img src="assets/img/azn-logo-black-2.png" alt=""
+                        style="width: 20px; height: 20px; margin-right: 15px;">
+                    <img src="assets/img/myshops-logo.jpg" alt="" style="width: 70px;">
+                </div>
+            </div>
+
+            <div class="main" style="padding-top: 45px;">
+                <div class="title">
+                    <h5>ROWENTA </h5>
+                </div>
+                <div class="model">
+                    <p>TN8961 Multistyle Easy 9in1</p>
+                </div>
+                <div class="installment-price" style="display: flex; margin-top: 60px;">
+                    <span class="ayliq">12 aylıq</span>
+                    <span class="qiymet">9.92</span>
+                    <img src="assets/img/azn-logo-black-2.png" alt=""
+                        style="width: 20px; height: 20px; margin-top: 13px;">
+                </div>
+                <div class="price" style="margin-top: 40px;">
+                    <span class="esas-price" style="margin-right: 4px; font-size: 32px;">119</span>
+                    <img src="assets/img/azn-logo-black-2.png" alt=""
+                        style="width: 20px; height: 20px; margin-right: 15px;">
+                    <img src="assets/img/myshops-logo.jpg" alt="" style="width: 70px;">
+                </div>
+            </div>
+
+            <div class="main">
+                <div class="title">
+                    <h5>Samsung</h5>
+                </div>
+                <div class="model">
+                    <p>UE43AU7140UXRU</p>
                 </div>
                 <div class="specifications">
                     <ul>
-                        <li>Növü: Quraşdırılan Soba</li>
-                        <li>Proqram: 5</li>
-                        <li>Taymer: Var</li>
-                        <li>Həcm: 66 L</li>
-                        <li>Ölçü: 59.7 × 56.8 × 55 sm</li>
-                        <li>İstehsalçı ölkə: Türkiyə</li>
+                        <li>Növü: Televizor</li>
+                        <li>Smart TV: Var</li>
+                        <li>Ekran: 43 (109 sm)</li>
+                        <li>Video Format: 4K UHD (3840x2160)</li>
                     </ul>
                 </div>
                 <div class="installment-price" style="display: flex;">
                     <span class="ayliq">12 aylıq</span>
-                    <span class="qiymet">53.30</span>
-                    <img src="assets/img/azn-logo-black-2.png" alt=""
-                        style="width: 20px; height: 20px; margin-top: 13px;">
+                    <span class="qiymet">99.92</span>
+                    <img src="assets/img/azn-logo-black-2.png" alt="" style="width: 20px; height: 20px; margin-top: 13px;">
                 </div>
                 <div class="price">
-                    <span class="esas-price" style="margin-right: 4px;">639</span>
-                    <img src="assets/img/azn-logo-black-2.png" alt=""
-                        style="width: 20px; height: 20px; margin-right: 15px;">
+                    <span class="esas-price" style="margin-right: 4px;">1199</span>
+                    <img src="assets/img/azn-logo-black-2.png" alt="" style="width: 20px; height: 20px; margin-right: 15px;">
                     <img src="assets/img/myshops-logo.jpg" alt="" style="width: 70px;">
                 </div>
             </div>
 
-            <div class="main" style="padding-top: 45px;">
+            <div class="main">
                 <div class="title">
-                    <h5>SONY</h5>
+                    <h5>Samsung</h5>
                 </div>
                 <div class="model">
-                    <p>S-FRAME DPF-C70A</p>
-                </div>
-                <div class="installment-price" style="display: flex; margin-top: 60px;">
-                    <span class="ayliq">12 aylıq</span>
-                    <span class="qiymet">2.49</span>
-                    <img src="assets/img/azn-logo-black-2.png" alt=""
-                        style="width: 20px; height: 20px; margin-top: 13px;">
-                </div>
-                <div class="price" style="margin-top: 40px;">
-                    <span class="esas-price" style="margin-right: 4px; font-size: 32px;">29.90</span>
-                    <img src="assets/img/azn-logo-black-2.png" alt=""
-                        style="width: 20px; height: 20px; margin-right: 15px;">
-                    <img src="assets/img/myshops-logo.jpg" alt="" style="width: 70px;">
-                </div>
-            </div>
-
-            <div class="main" style="padding-top: 30px;">
-                <div class="title">
-                    <h5>LG</h5>
-                </div>
-                <div class="model">
-                    <p>GN-C752HQCL</p>
+                    <p>UE43AU8000UXRU</p>
                 </div>
                 <div class="specifications">
                     <ul>
-                        <li>Ümumi həcmi: 506 lt</li>
-                        <li>Əritmə növü: NoFrost</li>
-                        <li>Enerji sinfi: A</li>
-                        <li style="font-size: 14px;">Ölçülər: 180 × 78 × 73 sm</li>
+                        <li>Növü: Televizor</li>
+                        <li>Smart TV: Var</li>
+                        <li>Ekran: 43 (109 sm)</li>
+                        <li>Video Format: 4K</li>
                     </ul>
                 </div>
                 <div class="installment-price" style="display: flex;">
                     <span class="ayliq">12 aylıq</span>
-                    <span class="qiymet">158.25</span>
-                    <img src="assets/img/azn-logo-black-2.png" alt=""
-                        style="width: 20px; height: 20px; margin-top: 13px;">
+                    <span class="qiymet">115.75</span>
+                    <img src="assets/img/azn-logo-black-2.png" alt="" style="width: 20px; height: 20px; margin-top: 13px;">
                 </div>
                 <div class="price">
-                    <span class="esas-price" style="margin-right: 4px;">1899</span>
+                    <span class="esas-price" style="margin-right: 4px;">1389</span>
+                    <img src="assets/img/azn-logo-black-2.png" alt="" style="width: 20px; height: 20px; margin-right: 15px;">
+                    <img src="assets/img/myshops-logo.jpg" alt="" style="width: 70px;">
+                </div>
+            </div>
+
+            <div class="main" style="padding-top: 45px;">
+                <div class="title">
+                    <h5>Braun</h5>
+                </div>
+                <div class="model">
+                    <p>IS5155</p>
+                </div>
+                <div class="installment-price" style="display: flex; margin-top: 60px;">
+                    <span class="ayliq">12 aylıq</span>
+                    <span class="qiymet">45.75</span>
+                    <img src="assets/img/azn-logo-black-2.png" alt=""
+                        style="width: 20px; height: 20px; margin-top: 13px;">
+                </div>
+                <div class="price" style="margin-top: 40px;">
+                    <span class="esas-price" style="margin-right: 4px; font-size: 32px;">549</span>
                     <img src="assets/img/azn-logo-black-2.png" alt=""
                         style="width: 20px; height: 20px; margin-right: 15px;">
                     <img src="assets/img/myshops-logo.jpg" alt="" style="width: 70px;">
@@ -211,103 +295,19 @@
 
             <div class="main" style="padding-top: 45px;">
                 <div class="title">
-                    <h5>BEURER</h5>
+                    <h5>Braun</h5>
                 </div>
                 <div class="model">
-                    <p>GS 14</p>
+                    <p>IS7156</p>
                 </div>
                 <div class="installment-price" style="display: flex; margin-top: 60px;">
                     <span class="ayliq">12 aylıq</span>
-                    <span class="qiymet">5.75</span>
+                    <span class="qiymet">62.42</span>
                     <img src="assets/img/azn-logo-black-2.png" alt=""
                         style="width: 20px; height: 20px; margin-top: 13px;">
                 </div>
                 <div class="price" style="margin-top: 40px;">
-                    <span class="esas-price" style="margin-right: 4px; font-size: 32px;">69</span>
-                    <img src="assets/img/azn-logo-black-2.png" alt=""
-                        style="width: 20px; height: 20px; margin-right: 15px;">
-                    <img src="assets/img/myshops-logo.jpg" alt="" style="width: 70px;">
-                </div>
-            </div>
-
-            <div class="main" style="padding-top: 45px;">
-                <div class="title">
-                    <h5>Tefal</h5>
-                </div>
-                <div class="model">
-                    <p>Premiss</p>
-                </div>
-                <div class="installment-price" style="display: flex; margin-top: 60px;">
-                    <span class="ayliq">12 aylıq</span>
-                    <span class="qiymet">4.08</span>
-                    <img src="assets/img/azn-logo-black-2.png" alt=""
-                        style="width: 20px; height: 20px; margin-top: 13px;">
-                </div>
-                <div class="price" style="margin-top: 40px;">
-                    <span class="esas-price" style="margin-right: 4px; font-size: 32px;">49</span>
-                    <img src="assets/img/azn-logo-black-2.png" alt=""
-                        style="width: 20px; height: 20px; margin-right: 15px;">
-                    <img src="assets/img/myshops-logo.jpg" alt="" style="width: 70px;">
-                </div>
-            </div>
-
-            <div class="main" style="padding-top: 45px;">
-                <div class="title">
-                    <h5>Tefal</h5>
-                </div>
-                <div class="model">
-                    <p>Premiss</p>
-                </div>
-                <div class="installment-price" style="display: flex; margin-top: 60px;">
-                    <span class="ayliq">12 aylıq</span>
-                    <span class="qiymet">4.08</span>
-                    <img src="assets/img/azn-logo-black-2.png" alt=""
-                        style="width: 20px; height: 20px; margin-top: 13px;">
-                </div>
-                <div class="price" style="margin-top: 40px;">
-                    <span class="esas-price" style="margin-right: 4px; font-size: 32px;">49</span>
-                    <img src="assets/img/azn-logo-black-2.png" alt=""
-                        style="width: 20px; height: 20px; margin-right: 15px;">
-                    <img src="assets/img/myshops-logo.jpg" alt="" style="width: 70px;">
-                </div>
-            </div>
-
-            <div class="main" style="padding-top: 45px;">
-                <div class="title">
-                    <h5>Tefal</h5>
-                </div>
-                <div class="model">
-                    <p>Premiss</p>
-                </div>
-                <div class="installment-price" style="display: flex; margin-top: 60px;">
-                    <span class="ayliq">12 aylıq</span>
-                    <span class="qiymet">4.08</span>
-                    <img src="assets/img/azn-logo-black-2.png" alt=""
-                        style="width: 20px; height: 20px; margin-top: 13px;">
-                </div>
-                <div class="price" style="margin-top: 40px;">
-                    <span class="esas-price" style="margin-right: 4px; font-size: 32px;">49</span>
-                    <img src="assets/img/azn-logo-black-2.png" alt=""
-                        style="width: 20px; height: 20px; margin-right: 15px;">
-                    <img src="assets/img/myshops-logo.jpg" alt="" style="width: 70px;">
-                </div>
-            </div>
-
-            <div class="main" style="padding-top: 45px;">
-                <div class="title">
-                    <h5>Tefal</h5>
-                </div>
-                <div class="model">
-                    <p>Premiss</p>
-                </div>
-                <div class="installment-price" style="display: flex; margin-top: 60px;">
-                    <span class="ayliq">12 aylıq</span>
-                    <span class="qiymet">4.08</span>
-                    <img src="assets/img/azn-logo-black-2.png" alt=""
-                        style="width: 20px; height: 20px; margin-top: 13px;">
-                </div>
-                <div class="price" style="margin-top: 40px;">
-                    <span class="esas-price" style="margin-right: 4px; font-size: 32px;">49</span>
+                    <span class="esas-price" style="margin-right: 4px; font-size: 32px;">749</span>
                     <img src="assets/img/azn-logo-black-2.png" alt=""
                         style="width: 20px; height: 20px; margin-right: 15px;">
                     <img src="assets/img/myshops-logo.jpg" alt="" style="width: 70px;">
