--- a/myshops 1k/35.html
+++ b/myshops 1k/35.html
@@ -97,145 +97,19 @@
     .size .price {
         margin-top: 5px;
     }
+
 </style>
 
 <body>
     <div class="containerr">
         <div class="row">
-            <div class="main" style="padding-top: 25px;">
-                <div class="title">
-                    <h5>Tefal</h5>
-                </div>
-                <div class="model">
-                    <p>Vitapress Sitrus 0,6 lt</p>
-                </div>
-                <div class="specifications">
-                    <ul class="ul-pad" style="margin-top: 40px;">
-                        <li>Güc: 25 Vt</li>
-                    </ul>
-                </div>
-                <div class="installment-price" style="display: flex; margin-top: 35px;">
-                    <span class="ayliq">12 aylıq</span>
-                    <span class="qiymet">7.42</span>
-                    <img src="assets/img/azn-logo-black-2.png" alt=""
-                        style="width: 20px; height: 20px; margin-top: 13px;">
-                </div>
-                <div class="price" style="margin-top: 15px;">
-                    <span class="esas-price" style="margin-right: 4px;">89</span>
-                    <img src="assets/img/azn-logo-black-2.png" alt=""
-                        style="width: 20px; height: 20px; margin-right: 15px;">
-                    <img src="assets/img/myshops-logo.jpg" alt="" style="width: 70px;">
-                </div>
-            </div>
-
-            <div class="main" style="padding-top: 10px;">
-                <div class="title">
-                    <h5>Bosch</h5>
-                </div>
-                <div class="model">
-                    <p>HBF011BA0Q</p>
-                </div>
-                <div class="specifications">
-                    <ul>
-                        <li>Növü: Quraşdırılan Soba</li>
-                        <li>Proqram: 5</li>
-                        <li>Taymer: Var</li>
-                        <li>Həcm: 66 L</li>
-                        <li>Ölçü: 59.7 × 56.8 × 55 sm</li>
-                        <li>İstehsalçı ölkə: Türkiyə</li>
-                    </ul>
-                </div>
-                <div class="installment-price" style="display: flex;">
-                    <span class="ayliq">12 aylıq</span>
-                    <span class="qiymet">53.30</span>
-                    <img src="assets/img/azn-logo-black-2.png" alt=""
-                        style="width: 20px; height: 20px; margin-top: 13px;">
-                </div>
-                <div class="price">
-                    <span class="esas-price" style="margin-right: 4px;">639</span>
-                    <img src="assets/img/azn-logo-black-2.png" alt=""
-                        style="width: 20px; height: 20px; margin-right: 15px;">
-                    <img src="assets/img/myshops-logo.jpg" alt="" style="width: 70px;">
-                </div>
-            </div>
 
             <div class="main" style="padding-top: 45px;">
                 <div class="title">
-                    <h5>SONY</h5>
+                    <h5>Maxwell</h5>
                 </div>
                 <div class="model">
-                    <p>S-FRAME DPF-C70A</p>
-                </div>
-                <div class="installment-price" style="display: flex; margin-top: 60px;">
-                    <span class="ayliq">12 aylıq</span>
-                    <span class="qiymet">2.49</span>
-                    <img src="assets/img/azn-logo-black-2.png" alt=""
-                        style="width: 20px; height: 20px; margin-top: 13px;">
-                </div>
-                <div class="price" style="margin-top: 40px;">
-                    <span class="esas-price" style="margin-right: 4px; font-size: 32px;">29.90</span>
-                    <img src="assets/img/azn-logo-black-2.png" alt=""
-                        style="width: 20px; height: 20px; margin-right: 15px;">
-                    <img src="assets/img/myshops-logo.jpg" alt="" style="width: 70px;">
-                </div>
-            </div>
-
-            <div class="main" style="padding-top: 30px;">
-                <div class="title">
-                    <h5>LG</h5>
-                </div>
-                <div class="model">
-                    <p>GN-C752HQCL</p>
-                </div>
-                <div class="specifications">
-                    <ul>
-                        <li>Ümumi həcmi: 506 lt</li>
-                        <li>Əritmə növü: NoFrost</li>
-                        <li>Enerji sinfi: A</li>
-                        <li style="font-size: 14px;">Ölçülər: 180 × 78 × 73 sm</li>
-                    </ul>
-                </div>
-                <div class="installment-price" style="display: flex;">
-                    <span class="ayliq">12 aylıq</span>
-                    <span class="qiymet">158.25</span>
-                    <img src="assets/img/azn-logo-black-2.png" alt=""
-                        style="width: 20px; height: 20px; margin-top: 13px;">
-                </div>
-                <div class="price">
-                    <span class="esas-price" style="margin-right: 4px;">1899</span>
-                    <img src="assets/img/azn-logo-black-2.png" alt=""
-                        style="width: 20px; height: 20px; margin-right: 15px;">
-                    <img src="assets/img/myshops-logo.jpg" alt="" style="width: 70px;">
-                </div>
-            </div>
-
-            <div class="main" style="padding-top: 45px;">
-                <div class="title">
-                    <h5>BEURER</h5>
-                </div>
-                <div class="model">
-                    <p>GS 14</p>
-                </div>
-                <div class="installment-price" style="display: flex; margin-top: 60px;">
-                    <span class="ayliq">12 aylıq</span>
-                    <span class="qiymet">5.75</span>
-                    <img src="assets/img/azn-logo-black-2.png" alt=""
-                        style="width: 20px; height: 20px; margin-top: 13px;">
-                </div>
-                <div class="price" style="margin-top: 40px;">
-                    <span class="esas-price" style="margin-right: 4px; font-size: 32px;">69</span>
-                    <img src="assets/img/azn-logo-black-2.png" alt=""
-                        style="width: 20px; height: 20px; margin-right: 15px;">
-                    <img src="assets/img/myshops-logo.jpg" alt="" style="width: 70px;">
-                </div>
-            </div>
-
-            <div class="main" style="padding-top: 45px;">
-                <div class="title">
-                    <h5>Tefal</h5>
-                </div>
-                <div class="model">
-                    <p>Premiss</p>
+                    <p>MW-3010</p>
                 </div>
                 <div class="installment-price" style="display: flex; margin-top: 60px;">
                     <span class="ayliq">12 aylıq</span>
@@ -253,19 +127,19 @@
 
             <div class="main" style="padding-top: 45px;">
                 <div class="title">
-                    <h5>Tefal</h5>
+                    <h5>PHILIPS</h5>
                 </div>
                 <div class="model">
-                    <p>Premiss</p>
+                    <p>DST5030/20</p>
                 </div>
                 <div class="installment-price" style="display: flex; margin-top: 60px;">
                     <span class="ayliq">12 aylıq</span>
-                    <span class="qiymet">4.08</span>
+                    <span class="qiymet">14.08</span>
                     <img src="assets/img/azn-logo-black-2.png" alt=""
                         style="width: 20px; height: 20px; margin-top: 13px;">
                 </div>
                 <div class="price" style="margin-top: 40px;">
-                    <span class="esas-price" style="margin-right: 4px; font-size: 32px;">49</span>
+                    <span class="esas-price" style="margin-right: 4px; font-size: 32px;">169</span>
                     <img src="assets/img/azn-logo-black-2.png" alt=""
                         style="width: 20px; height: 20px; margin-right: 15px;">
                     <img src="assets/img/myshops-logo.jpg" alt="" style="width: 70px;">
@@ -274,19 +148,19 @@
 
             <div class="main" style="padding-top: 45px;">
                 <div class="title">
-                    <h5>Tefal</h5>
+                    <h5>PHILIPS</h5>
                 </div>
                 <div class="model">
-                    <p>Premiss</p>
+                    <p>DST5010/10</p>
                 </div>
                 <div class="installment-price" style="display: flex; margin-top: 60px;">
                     <span class="ayliq">12 aylıq</span>
-                    <span class="qiymet">4.08</span>
+                    <span class="qiymet">11.58</span>
                     <img src="assets/img/azn-logo-black-2.png" alt=""
                         style="width: 20px; height: 20px; margin-top: 13px;">
                 </div>
                 <div class="price" style="margin-top: 40px;">
-                    <span class="esas-price" style="margin-right: 4px; font-size: 32px;">49</span>
+                    <span class="esas-price" style="margin-right: 4px; font-size: 32px;">139</span>
                     <img src="assets/img/azn-logo-black-2.png" alt=""
                         style="width: 20px; height: 20px; margin-right: 15px;">
                     <img src="assets/img/myshops-logo.jpg" alt="" style="width: 70px;">
@@ -295,25 +169,129 @@
 
             <div class="main" style="padding-top: 45px;">
                 <div class="title">
-                    <h5>Tefal</h5>
+                    <h5>PHILIPS</h5>
                 </div>
                 <div class="model">
-                    <p>Premiss</p>
+                    <p>GC484/40</p>
                 </div>
                 <div class="installment-price" style="display: flex; margin-top: 60px;">
                     <span class="ayliq">12 aylıq</span>
-                    <span class="qiymet">4.08</span>
+                    <span class="qiymet">14.08</span>
                     <img src="assets/img/azn-logo-black-2.png" alt=""
                         style="width: 20px; height: 20px; margin-top: 13px;">
                 </div>
                 <div class="price" style="margin-top: 40px;">
-                    <span class="esas-price" style="margin-right: 4px; font-size: 32px;">49</span>
+                    <span class="esas-price" style="margin-right: 4px; font-size: 32px;">169</span>
                     <img src="assets/img/azn-logo-black-2.png" alt=""
                         style="width: 20px; height: 20px; margin-right: 15px;">
                     <img src="assets/img/myshops-logo.jpg" alt="" style="width: 70px;">
                 </div>
             </div>
 
+            <div class="main" style="padding-top: 45px;">
+                <div class="title">
+                    <h5>Sencor</h5>
+                </div>
+                <div class="model">
+                    <p>SSI 2027BL</p>
+                </div>
+                <div class="installment-price" style="display: flex; margin-top: 60px;">
+                    <span class="ayliq">12 aylıq</span>
+                    <span class="qiymet">3.25</span>
+                    <img src="assets/img/azn-logo-black-2.png" alt=""
+                        style="width: 20px; height: 20px; margin-top: 13px;">
+                </div>
+                <div class="price" style="margin-top: 40px;">
+                    <span class="esas-price" style="margin-right: 4px; font-size: 32px;">39</span>
+                    <img src="assets/img/azn-logo-black-2.png" alt=""
+                        style="width: 20px; height: 20px; margin-right: 15px;">
+                    <img src="assets/img/myshops-logo.jpg" alt="" style="width: 70px;">
+                </div>
+            </div>
+
+            <div class="main" style="padding-top: 45px;">
+                <div class="title">
+                    <h5>TEFAL</h5>
+                </div>
+                <div class="model">
+                    <p>Smart Protect Plus FV6870E0</p>
+                </div>
+                <div class="installment-price" style="display: flex; margin-top: 60px;">
+                    <span class="ayliq">12 aylıq</span>
+                    <span class="qiymet">16.58</span>
+                    <img src="assets/img/azn-logo-black-2.png" alt=""
+                        style="width: 20px; height: 20px; margin-top: 13px;">
+                </div>
+                <div class="price" style="margin-top: 40px;">
+                    <span class="esas-price" style="margin-right: 4px; font-size: 32px;">199</span>
+                    <img src="assets/img/azn-logo-black-2.png" alt=""
+                        style="width: 20px; height: 20px; margin-right: 15px;">
+                    <img src="assets/img/myshops-logo.jpg" alt="" style="width: 70px;">
+                </div>
+            </div>
+
+            <div class="main" style="padding-top: 45px;">
+                <div class="title">
+                    <h5>TEFAL</h5>
+                </div>
+                <div class="model">
+                    <p>Turbo Pro FV5685</p>
+                </div>
+                <div class="installment-price" style="display: flex; margin-top: 60px;">
+                    <span class="ayliq">12 aylıq</span>
+                    <span class="qiymet">18.25</span>
+                    <img src="assets/img/azn-logo-black-2.png" alt=""
+                        style="width: 20px; height: 20px; margin-top: 13px;">
+                </div>
+                <div class="price" style="margin-top: 40px;">
+                    <span class="esas-price" style="margin-right: 4px; font-size: 32px;">219</span>
+                    <img src="assets/img/azn-logo-black-2.png" alt=""
+                        style="width: 20px; height: 20px; margin-right: 15px;">
+                    <img src="assets/img/myshops-logo.jpg" alt="" style="width: 70px;">
+                </div>
+            </div>
+
+            <div class="main" style="padding-top: 45px;">
+                <div class="title">
+                    <h5>TEFAL</h5>
+                </div>
+                <div class="model">
+                    <p>Turbo Pro FV5688</p>
+                </div>
+                <div class="installment-price" style="display: flex; margin-top: 60px;">
+                    <span class="ayliq">12 aylıq</span>
+                    <span class="qiymet">19.08</span>
+                    <img src="assets/img/azn-logo-black-2.png" alt=""
+                        style="width: 20px; height: 20px; margin-top: 13px;">
+                </div>
+                <div class="price" style="margin-top: 40px;">
+                    <span class="esas-price" style="margin-right: 4px; font-size: 32px;">229</span>
+                    <img src="assets/img/azn-logo-black-2.png" alt=""
+                        style="width: 20px; height: 20px; margin-right: 15px;">
+                    <img src="assets/img/myshops-logo.jpg" alt="" style="width: 70px;">
+                </div>
+            </div>
+
+            <div class="main" style="padding-top: 45px;">
+                <div class="title">
+                    <h5>TEFAL</h5>
+                </div>
+                <div class="model">
+                    <p>Turbo Pro FV5695</p>
+                </div>
+                <div class="installment-price" style="display: flex; margin-top: 60px;">
+                    <span class="ayliq">12 aylıq</span>
+                    <span class="qiymet">18.25</span>
+                    <img src="assets/img/azn-logo-black-2.png" alt=""
+                        style="width: 20px; height: 20px; margin-top: 13px;">
+                </div>
+                <div class="price" style="margin-top: 40px;">
+                    <span class="esas-price" style="margin-right: 4px; font-size: 32px;">219</span>
+                    <img src="assets/img/azn-logo-black-2.png" alt=""
+                        style="width: 20px; height: 20px; margin-right: 15px;">
+                    <img src="assets/img/myshops-logo.jpg" alt="" style="width: 70px;">
+                </div>
+            </div>
         </div>
     </div>
 </body>
