--- a/myshops 1k/36.html
+++ b/myshops 1k/36.html
@@ -102,217 +102,192 @@
 <body>
     <div class="containerr">
         <div class="row">
-            <div class="main" style="padding-top: 25px;">
+            <div class="main" style="padding-top: 45px;">
                 <div class="title">
-                    <h5>Tefal</h5>
+                    <h5>TEFAL</h5>
                 </div>
                 <div class="model">
-                    <p>Vitapress Sitrus 0,6 lt</p>
+                    <p>Turbo Pro FV5696</p>
                 </div>
-                <div class="specifications">
-                    <ul class="ul-pad" style="margin-top: 40px;">
-                        <li>Güc: 25 Vt</li>
-                    </ul>
-                </div>
-                <div class="installment-price" style="display: flex; margin-top: 35px;">
+                <div class="installment-price" style="display: flex; margin-top: 60px;">
                     <span class="ayliq">12 aylıq</span>
-                    <span class="qiymet">7.42</span>
+                    <span class="qiymet">19.08</span>
                     <img src="assets/img/azn-logo-black-2.png" alt=""
                         style="width: 20px; height: 20px; margin-top: 13px;">
                 </div>
-                <div class="price" style="margin-top: 15px;">
-                    <span class="esas-price" style="margin-right: 4px;">89</span>
+                <div class="price" style="margin-top: 40px;">
+                    <span class="esas-price" style="margin-right: 4px; font-size: 32px;">229</span>
                     <img src="assets/img/azn-logo-black-2.png" alt=""
                         style="width: 20px; height: 20px; margin-right: 15px;">
                     <img src="assets/img/myshops-logo.jpg" alt="" style="width: 70px;">
                 </div>
             </div>
 
-            <div class="main" style="padding-top: 10px;">
+            <div class="main" style="padding-top: 45px;">
+                <div class="title">
+                    <h5>TEFAL</h5>
+                </div>
+                <div class="model">
+                    <p>Ultimate Pure FV9845</p>
+                </div>
+                <div class="installment-price" style="display: flex; margin-top: 60px;">
+                    <span class="ayliq">12 aylıq</span>
+                    <span class="qiymet">23.25</span>
+                    <img src="assets/img/azn-logo-black-2.png" alt=""
+                        style="width: 20px; height: 20px; margin-top: 13px;">
+                </div>
+                <div class="price" style="margin-top: 40px;">
+                    <span class="esas-price" style="margin-right: 4px; font-size: 32px;">279</span>
+                    <img src="assets/img/azn-logo-black-2.png" alt=""
+                        style="width: 20px; height: 20px; margin-right: 15px;">
+                    <img src="assets/img/myshops-logo.jpg" alt="" style="width: 70px;">
+                </div>
+            </div>
+
+            <div class="main" style="padding-top: 45px;">
+                <div class="title">
+                    <h5>TEFAL</h5>
+                </div>
+                <div class="model">
+                    <p>Ultragliss Plus FV6840</p>
+                </div>
+                <div class="installment-price" style="display: flex; margin-top: 60px;">
+                    <span class="ayliq">12 aylıq</span>
+                    <span class="qiymet">15.75</span>
+                    <img src="assets/img/azn-logo-black-2.png" alt=""
+                        style="width: 20px; height: 20px; margin-top: 13px;">
+                </div>
+                <div class="price" style="margin-top: 40px;">
+                    <span class="esas-price" style="margin-right: 4px; font-size: 32px;">189</span>
+                    <img src="assets/img/azn-logo-black-2.png" alt=""
+                        style="width: 20px; height: 20px; margin-right: 15px;">
+                    <img src="assets/img/myshops-logo.jpg" alt="" style="width: 70px;">
+                </div>
+            </div>
+
+            <div class="main">
                 <div class="title">
                     <h5>Bosch</h5>
                 </div>
                 <div class="model">
-                    <p>HBF011BA0Q</p>
+                    <p>WAJ2017SME</p>
+                </div>
+                <div class="specifications">
+                    <ul style="margin-top: 25px;">
+                        <li>Çəki: 7 kq</li>
+                        <li>Dövr sayı: 1000</li>
+                        <li>Ölçü: 84.8 x 59.8 x 59 sm</li>
+                    </ul>
+                </div>
+                <div class="installment-price" style="display: flex; margin-top: 35px;">
+                    <span class="ayliq">12 aylıq</span>
+                    <span class="qiymet"> 99.08 </span>
+                    <img src="assets/img/azn-logo-black-2.png" alt=""
+                        style="width: 20px; height: 20px; margin-top: 13px;">
+                </div>
+                <div class="price" style="margin-top: 25px;">
+                    <span class="esas-price" style="margin-right: 4px;">1189</span>
+                    <img src="assets/img/azn-logo-black-2.png" alt=""
+                        style="width: 20px; height: 20px; margin-right: 15px;">
+                    <img src="assets/img/myshops-logo.jpg" alt="" style="width: 70px;">
+                </div>
+            </div>
+
+            <div class="main" style="padding-top: 45px;">
+                <div class="title">
+                    <h5>WalkingPad </h5>
+                </div>
+                <div class="model">
+                    <p>A1F Pro</p>
+                </div>
+                <div class="installment-price" style="display: flex; margin-top: 60px;">
+                    <span class="ayliq">12 aylıq</span>
+                    <span class="qiymet">79.08</span>
+                    <img src="assets/img/azn-logo-black-2.png" alt=""
+                        style="width: 20px; height: 20px; margin-top: 13px;">
+                </div>
+                <div class="price" style="margin-top: 40px;">
+                    <span class="esas-price" style="margin-right: 4px; font-size: 32px;">949</span>
+                    <img src="assets/img/azn-logo-black-2.png" alt=""
+                        style="width: 20px; height: 20px; margin-right: 15px;">
+                    <img src="assets/img/myshops-logo.jpg" alt="" style="width: 70px;">
+                </div>
+            </div>
+
+            <div class="main" style="padding-top: 45px;">
+                <div class="title">
+                    <h5>Xiaomi</h5>
+                </div>
+                <div class="model">
+                    <p>Hair Clipper</p>
+                </div>
+                <div class="installment-price" style="display: flex; margin-top: 60px;">
+                    <span class="ayliq">12 aylıq</span>
+                    <span class="qiymet">8.25</span>
+                    <img src="assets/img/azn-logo-black-2.png" alt=""
+                        style="width: 20px; height: 20px; margin-top: 13px;">
+                </div>
+                <div class="price" style="margin-top: 40px;">
+                    <span class="esas-price" style="margin-right: 4px; font-size: 32px;">99</span>
+                    <img src="assets/img/azn-logo-black-2.png" alt=""
+                        style="width: 20px; height: 20px; margin-right: 15px;">
+                    <img src="assets/img/myshops-logo.jpg" alt="" style="width: 70px;">
+                </div>
+            </div>
+
+            <div class="main" style="padding-top: 32px;">
+                <div class="title">
+                    <h5>Xiaomi</h5>
+                </div>
+                <div class="model">
+                    <p>Roborock S5 MAX</p>
                 </div>
                 <div class="specifications">
                     <ul>
-                        <li>Növü: Quraşdırılan Soba</li>
-                        <li>Proqram: 5</li>
-                        <li>Taymer: Var</li>
-                        <li>Həcm: 66 L</li>
-                        <li>Ölçü: 59.7 × 56.8 × 55 sm</li>
-                        <li>İstehsalçı ölkə: Türkiyə</li>
+                        <li>Növü: Tozsoran</li>
+                        <li>İstehlak  gücü: 58 WT</li>
+                        <li>Akkumulyatorun həcmi, mA/saat: 5200</li>
                     </ul>
                 </div>
                 <div class="installment-price" style="display: flex;">
                     <span class="ayliq">12 aylıq</span>
-                    <span class="qiymet">53.30</span>
-                    <img src="assets/img/azn-logo-black-2.png" alt=""
-                        style="width: 20px; height: 20px; margin-top: 13px;">
+                    <span class="qiymet">84.92</span>
+                    <img src="assets/img/azn-logo-black-2.png" alt="" style="width: 20px; height: 20px; margin-top: 13px;">
                 </div>
                 <div class="price">
-                    <span class="esas-price" style="margin-right: 4px;">639</span>
-                    <img src="assets/img/azn-logo-black-2.png" alt=""
-                        style="width: 20px; height: 20px; margin-right: 15px;">
+                    <span class="esas-price" style="margin-right: 4px;">1019</span>
+                    <img src="assets/img/azn-logo-black-2.png" alt="" style="width: 20px; height: 20px; margin-right: 15px;">
                     <img src="assets/img/myshops-logo.jpg" alt="" style="width: 70px;">
                 </div>
             </div>
 
-            <div class="main" style="padding-top: 45px;">
+            <div class="main" style="padding-top: 32px;">
                 <div class="title">
-                    <h5>SONY</h5>
+                    <h5>Xiaomi</h5>
                 </div>
                 <div class="model">
-                    <p>S-FRAME DPF-C70A</p>
-                </div>
-                <div class="installment-price" style="display: flex; margin-top: 60px;">
-                    <span class="ayliq">12 aylıq</span>
-                    <span class="qiymet">2.49</span>
-                    <img src="assets/img/azn-logo-black-2.png" alt=""
-                        style="width: 20px; height: 20px; margin-top: 13px;">
-                </div>
-                <div class="price" style="margin-top: 40px;">
-                    <span class="esas-price" style="margin-right: 4px; font-size: 32px;">29.90</span>
-                    <img src="assets/img/azn-logo-black-2.png" alt=""
-                        style="width: 20px; height: 20px; margin-right: 15px;">
-                    <img src="assets/img/myshops-logo.jpg" alt="" style="width: 70px;">
-                </div>
-            </div>
-
-            <div class="main" style="padding-top: 30px;">
-                <div class="title">
-                    <h5>LG</h5>
-                </div>
-                <div class="model">
-                    <p>GN-C752HQCL</p>
+                    <p>Roborock S5 MAX</p>
                 </div>
                 <div class="specifications">
                     <ul>
-                        <li>Ümumi həcmi: 506 lt</li>
-                        <li>Əritmə növü: NoFrost</li>
-                        <li>Enerji sinfi: A</li>
-                        <li style="font-size: 14px;">Ölçülər: 180 × 78 × 73 sm</li>
+                        <li>Növü: Tozsoran</li>
+                        <li>İstehlak  gücü: 58 WT</li>
+                        <li>Akkumulyatorun həcmi, mA/saat: 5200</li>
                     </ul>
                 </div>
                 <div class="installment-price" style="display: flex;">
                     <span class="ayliq">12 aylıq</span>
-                    <span class="qiymet">158.25</span>
-                    <img src="assets/img/azn-logo-black-2.png" alt=""
-                        style="width: 20px; height: 20px; margin-top: 13px;">
+                    <span class="qiymet">84.92</span>
+                    <img src="assets/img/azn-logo-black-2.png" alt="" style="width: 20px; height: 20px; margin-top: 13px;">
                 </div>
                 <div class="price">
-                    <span class="esas-price" style="margin-right: 4px;">1899</span>
-                    <img src="assets/img/azn-logo-black-2.png" alt=""
-                        style="width: 20px; height: 20px; margin-right: 15px;">
+                    <span class="esas-price" style="margin-right: 4px;">1019</span>
+                    <img src="assets/img/azn-logo-black-2.png" alt="" style="width: 20px; height: 20px; margin-right: 15px;">
                     <img src="assets/img/myshops-logo.jpg" alt="" style="width: 70px;">
                 </div>
             </div>
 
-            <div class="main" style="padding-top: 45px;">
-                <div class="title">
-                    <h5>BEURER</h5>
-                </div>
-                <div class="model">
-                    <p>GS 14</p>
-                </div>
-                <div class="installment-price" style="display: flex; margin-top: 60px;">
-                    <span class="ayliq">12 aylıq</span>
-                    <span class="qiymet">5.75</span>
-                    <img src="assets/img/azn-logo-black-2.png" alt=""
-                        style="width: 20px; height: 20px; margin-top: 13px;">
-                </div>
-                <div class="price" style="margin-top: 40px;">
-                    <span class="esas-price" style="margin-right: 4px; font-size: 32px;">69</span>
-                    <img src="assets/img/azn-logo-black-2.png" alt=""
-                        style="width: 20px; height: 20px; margin-right: 15px;">
-                    <img src="assets/img/myshops-logo.jpg" alt="" style="width: 70px;">
-                </div>
-            </div>
 
-            <div class="main" style="padding-top: 45px;">
-                <div class="title">
-                    <h5>Tefal</h5>
-                </div>
-                <div class="model">
-                    <p>Premiss</p>
-                </div>
-                <div class="installment-price" style="display: flex; margin-top: 60px;">
-                    <span class="ayliq">12 aylıq</span>
-                    <span class="qiymet">4.08</span>
-                    <img src="assets/img/azn-logo-black-2.png" alt=""
-                        style="width: 20px; height: 20px; margin-top: 13px;">
-                </div>
-                <div class="price" style="margin-top: 40px;">
-                    <span class="esas-price" style="margin-right: 4px; font-size: 32px;">49</span>
-                    <img src="assets/img/azn-logo-black-2.png" alt=""
-                        style="width: 20px; height: 20px; margin-right: 15px;">
-                    <img src="assets/img/myshops-logo.jpg" alt="" style="width: 70px;">
-                </div>
-            </div>
-
-            <div class="main" style="padding-top: 45px;">
-                <div class="title">
-                    <h5>Tefal</h5>
-                </div>
-                <div class="model">
-                    <p>Premiss</p>
-                </div>
-                <div class="installment-price" style="display: flex; margin-top: 60px;">
-                    <span class="ayliq">12 aylıq</span>
-                    <span class="qiymet">4.08</span>
-                    <img src="assets/img/azn-logo-black-2.png" alt=""
-                        style="width: 20px; height: 20px; margin-top: 13px;">
-                </div>
-                <div class="price" style="margin-top: 40px;">
-                    <span class="esas-price" style="margin-right: 4px; font-size: 32px;">49</span>
-                    <img src="assets/img/azn-logo-black-2.png" alt=""
-                        style="width: 20px; height: 20px; margin-right: 15px;">
-                    <img src="assets/img/myshops-logo.jpg" alt="" style="width: 70px;">
-                </div>
-            </div>
-
-            <div class="main" style="padding-top: 45px;">
-                <div class="title">
-                    <h5>Tefal</h5>
-                </div>
-                <div class="model">
-                    <p>Premiss</p>
-                </div>
-                <div class="installment-price" style="display: flex; margin-top: 60px;">
-                    <span class="ayliq">12 aylıq</span>
-                    <span class="qiymet">4.08</span>
-                    <img src="assets/img/azn-logo-black-2.png" alt=""
-                        style="width: 20px; height: 20px; margin-top: 13px;">
-                </div>
-                <div class="price" style="margin-top: 40px;">
-                    <span class="esas-price" style="margin-right: 4px; font-size: 32px;">49</span>
-                    <img src="assets/img/azn-logo-black-2.png" alt=""
-                        style="width: 20px; height: 20px; margin-right: 15px;">
-                    <img src="assets/img/myshops-logo.jpg" alt="" style="width: 70px;">
-                </div>
-            </div>
-
-            <div class="main" style="padding-top: 45px;">
-                <div class="title">
-                    <h5>Tefal</h5>
-                </div>
-                <div class="model">
-                    <p>Premiss</p>
-                </div>
-                <div class="installment-price" style="display: flex; margin-top: 60px;">
-                    <span class="ayliq">12 aylıq</span>
-                    <span class="qiymet">4.08</span>
-                    <img src="assets/img/azn-logo-black-2.png" alt=""
-                        style="width: 20px; height: 20px; margin-top: 13px;">
-                </div>
-                <div class="price" style="margin-top: 40px;">
-                    <span class="esas-price" style="margin-right: 4px; font-size: 32px;">49</span>
-                    <img src="assets/img/azn-logo-black-2.png" alt=""
-                        style="width: 20px; height: 20px; margin-right: 15px;">
-                    <img src="assets/img/myshops-logo.jpg" alt="" style="width: 70px;">
-                </div>
-            </div>
 
         </div>
     </div>
