--- a/myshops 1k/total.html
+++ b/myshops 1k/total.html
@@ -4447,7 +4447,7 @@
                         style="width: 20px; height: 20px; margin-right: 15px;">
                     <img src="assets/img/myshops-logo.jpg" alt="" style="width: 70px;">
                 </div>
-            </div> -->
+            </div>
 
             <div class="main">
                 <div class="title">
@@ -16221,7 +16221,7 @@
                 </div>
             </div>
 
-            <div class="main">
+            <div class="main size">
                 <div class="title">
                     <h5>Philips</h5>
                 </div>
@@ -16252,7 +16252,7 @@
                     <img src="assets/img/myshops-logo.jpg" alt="" style="width: 70px;">
                 </div>
             </div>
-            <div class="main">
+            <div class="main size">
                 <div class="title">
                     <h5>Philips</h5>
                 </div>
@@ -16283,7 +16283,7 @@
                     <img src="assets/img/myshops-logo.jpg" alt="" style="width: 70px;">
                 </div>
             </div>
-            <div class="main">
+            <div class="main size">
                 <div class="title">
                     <h5>Philips</h5>
                 </div>
@@ -16315,7 +16315,7 @@
                 </div>
             </div>
 
-            <div class="main">
+            <div class="main size">
                 <div class="title">
                     <h5>Philips</h5>
                 </div>
